--- a/build.yml
+++ b/build.yml
@@ -3,5 +3,7 @@
   become: true
   tasks:
    - name: apache installing using jenkins
-     apt: name=apache2 state=present
+     apt: 
+       name: apache2 
+       state: present
      
